--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "AdLinkFly Shortener Bot",
+    "name": "linksmoneyconvertor_bot",
     "description": "Make Your Own Short link Bot for your shortner website running on adlinkfly script",
     "keywords": [
         "telegram",
